--- a/src/03/03-11.html
+++ b/src/03/03-11.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>03-09</title>
+    <title>03-11</title>
   </head>
   <body>
     <div id="app">
-      예금액 : <input type="text" v-model="amount" />
-      <img
-        v-show="amount < 0"
-        src="https://contactsvc.bmaster.kro.kr/img/error.png"
-        title="마이너스는 허용하지 않습니다"
-        style="width: 15px; height: 15px; vertical-align: middle"
-      />
+      잔고 : <input type="text" v-model="balance" />
+      <br />
+      회원님의 등급 :
+      <span v-if="balance >= 1000000">Gold</span>
+      <span v-else-if="balance >= 500000">Silver</span>
+      <span v-else-if="balance >= 200000">Bronze</span>
+      <span v-else>Basic</span>
     </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script>
@@ -21,9 +21,9 @@
 
       createApp({
         setup() {
-          let amount = ref("");
+          let balance = ref(0);
           return {
-            amount,
+            balance,
           };
         },
       }).mount("#app");
