--- a/src/03/03-15.html
+++ b/src/03/03-15.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>03-14</title>
+    <title>03-15</title>
     <style>
       #list {
         width: 600px;
@@ -19,6 +19,10 @@
         color: yellow;
         background-color: purple;
       }
+      .divider {
+        height: 2px;
+        background-color: gray;
+      }
     </style>
   </head>
   <body>
@@ -32,11 +36,16 @@
           </tr>
         </thead>
         <tbody id="contacts">
-          <tr v-for="(contact, index) in contacts" :key="contact.no">
-            <td>{{index+1}}</td>
-            <td>{{contact.name}}</td>
-            <td>{{contact.tel}}</td>
-          </tr>
+          <template v-for="(contact, index) in contacts" :key="contact.no">
+            <tr>
+              <td>{{contact.no}}</td>
+              <td>{{contact.name}}</td>
+              <td>{{contact.tel}}</td>
+            </tr>
+            <tr class="divider" v-if="index % 4 === 3">
+              <td colspan="3"></td>
+            </tr>
+          </template>
         </tbody>
       </table>
     </div>
@@ -46,19 +55,16 @@
 
       createApp({
         setup() {
-          let pageno = ref(1);
-          let pagesize = ref(4);
-          let totalcount = ref(100);
           let contacts = [
             { no: 1011, name: "RM", tel: "010-3456-8299" },
             { no: 1012, name: "정국", tel: "010-3456-8298" },
             { no: 1013, name: "제이홉", tel: "010-3456-8297" },
             { no: 1014, name: "슈가", tel: "010-3456-8296" },
+            { no: 1015, name: "진", tel: "010-3456-8295" },
+            { no: 1016, name: "뷔", tel: "010-3456-8294" },
+            { no: 1017, name: "지민", tel: "010-3456-8293" },
           ];
           return {
-            pageno,
-            pagesize,
-            totalcount,
             contacts,
           };
         },
